Fix for older libdevmapper + other reliability fixes.

--- a/configure.ac
+++ b/configure.ac
@@ -101,6 +101,7 @@ PKG_CHECK_MODULES([UUID], [uuid],
 
 PKG_CHECK_MODULES([DEVMAPPER], [devmapper >= 1.0],
     [
+        AC_CHECK_FUNC(dm_task_retry_remove, [DEVMAPPER_CFLAGS="$DEVMAPPER_CFLAGS -DHAVE_DM_TASK_RETRY_REMOVE"])
         AC_SUBST([DEVMAPPER_CFLAGS])
         AC_SUBST([DEVMAPPER_LIBS])
     ]
