--- a/configure.ac
+++ b/configure.ac
@@ -101,7 +101,15 @@ PKG_CHECK_MODULES([UUID], [uuid],
 
 PKG_CHECK_MODULES([DEVMAPPER], [devmapper >= 1.0],
     [
-        AC_CHECK_FUNC(dm_task_retry_remove, [DEVMAPPER_CFLAGS="$DEVMAPPER_CFLAGS -DHAVE_DM_TASK_RETRY_REMOVE"])
+	OLD_CFLAGS="$CFLAGS"
+	CFLAGS="$CFLAGS $DEVMAPPER_CFLAGS"
+	OLD_LDFLAGS="$LDFLAGS"
+	LDFLAGS="$LDFLAGS $DEVMAPPER_LIBS"
+	AC_LINK_IFELSE(
+	        [AC_LANG_PROGRAM([[#include <libdevmapper.h>]], [[dm_task_retry_remove(NULL);]])],
+        	[DEVMAPPER_CFLAGS="$DEVMAPPER_CFLAGS -DHAVE_DM_TASK_RETRY_REMOVE"])
+	CFLAGS="$OLD_CFLAGS"
+	LDFLAGS="$OLD_LDFLAGS"
         AC_SUBST([DEVMAPPER_CFLAGS])
         AC_SUBST([DEVMAPPER_LIBS])
     ]
